--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/mainBackgroundColor"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
-
+<!--NestedScrollView is used to make the content scrollable-->
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
+<!--RelativeLayout is used to place the views in a relative manner-->
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -25,8 +25,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="16dp"
-                android:text="Welcome Back"
-                android:textSize="24sp"
+                android:text="ToDo"
+                android:textColor="@color/dark_blue"
+                android:textSize="26sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -36,10 +37,12 @@
                 android:layout_below="@id/welcomeTxt"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="4dp"
-                android:text="Today's Task"
+                android:text="Here is Your Tasks"
+                android:textColor="@color/blue"
                 android:textSize="28sp"
                 android:textStyle="bold" />
 
+<!--LinearLayout is used to place the views in a linear manner-->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -62,9 +65,10 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:src="@drawable/ic_view_list"
-                    app:tint="@color/black" />
+                    app:tint="@color/blue" />
             </LinearLayout>
 
+<!--TextInputLayout is used to wrap the TextInputEditText and provide floating label-->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/edSearchL"
                 style="@style/SearchInputLayout"
@@ -106,13 +110,14 @@
 
     </androidx.core.widget.NestedScrollView>
 
+<!--FloatingActionButton is used to add a new task-->
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/addTaskFABtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
-        android:backgroundTint="@color/black"
+        android:backgroundTint="@color/blue"
         android:text="Add Task"
         android:textColor="@color/white"
         android:textSize="18sp"
