--- a/app/src/main/res/layout/view_task_grid_layout.xml
+++ b/app/src/main/res/layout/view_task_grid_layout.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/CardViewStyle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="4dp"
     android:layout_marginVertical="4dp"
     android:foreground="?android:attr/selectableItemBackground"
-    app:cardBackgroundColor="@color/white"
+    app:cardBackgroundColor="#E0F6F1"
     app:cardElevation="10dp">
 
 
@@ -22,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Title"
-            android:textColor="@color/black"
+            android:textColor="@color/dark_blue"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -32,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="4dp"
             android:text="Description"
-            android:textColor="@color/black"
+            android:textColor="@color/blue"
             android:textSize="18sp"
             android:textStyle="bold" />
 
